syntax = "proto3";

package auth;
option go_package = "douyin-mall/proto/auth";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse) {}
  rpc RenewToken(RenewTokenRequest) returns (RenewTokenResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
  uint32 user_id = 2;
}

message RenewTokenRequest {
  string old_token = 1;
}

message RenewTokenResponse {
  string new_token = 1;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
}
